<?xml version="1.0" encoding="utf-8"?>

<resources>

  <eat-comment/>

  <string name="app_name">RabbitMQ Management Widgets</string>

  <string name="queued_messages_indicator_default_title">Queued Messages</string>
  <string name="queued_messages_indicator_default_ready_text">Ready</string>
  <string name="queued_messages_indicator_default_unacked_text">Unacked</string>
  <string name="queued_messages_indicator_default_total_text">Total</string>
  <string name="queued_messages_indicator_range_button_content_description">Range</string>

  <string name="message_rates_indicator_default_title">Message Rates</string>
  <string name="message_rates_indicator_default_publish_text">Publish</string>
  <string name="message_rates_indicator_default_confirm_text">Confirm</string>
  <string name="message_rates_indicator_default_publish_in_text">P. In</string>
  <string name="message_rates_indicator_default_publish_out_text">P. Out</string>
  <string name="message_rates_indicator_default_deliver_text">Delivered</string>
  <string name="message_rates_indicator_default_redelivered_text">Redelivered</string>
  <string name="message_rates_indicator_range_button_content_description">Range</string>

  <string name="global_counts_indicator_connections">Connections</string>
  <string name="global_counts_indicator_channels">Channels</string>
  <string name="global_counts_indicator_exchanges">Exchanges</string>
  <string name="global_counts_indicator_queues">Queues</string>
  <string name="global_counts_indicator_consumers">Consumers</string>

</resources>
