<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card:cardElevation="@dimen/cardview_default_elevation"
    card:cardUseCompatPadding="true"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="@dimen/queued_messages_indicator_padding_bottom"
      android:paddingEnd="@dimen/queued_messages_indicator_padding"
      android:paddingLeft="@dimen/queued_messages_indicator_padding"
      android:paddingRight="@dimen/queued_messages_indicator_padding"
      android:paddingStart="@dimen/queued_messages_indicator_padding"
      android:paddingTop="@dimen/queued_messages_indicator_padding"
      >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/queued_messages_indicator_margin_bottom"
        android:text="@string/queued_messages_indicator_default_title"
        android:textSize="@dimen/queued_messages_indicator_title_size"
        android:textStyle="bold"
        />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/messages_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/queued_messages_indicator_chart_min_height"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <Button
            android:id="@+id/publish_button"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_rates_indicator_default_publish_text"
            android:textColor="@color/message_rates_indicator_default_publish_color"
            style="@style/RabbitmqManagement.Widget.QueuedMessagesIndicator.Button"
            />

        <Button
            android:id="@+id/publish_out_button"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_rates_indicator_default_publish_out_text"
            android:textColor="@color/message_rates_indicator_default_publish_out_color"
            style="@style/RabbitmqManagement.Widget.QueuedMessagesIndicator.Button"
            />

        <Button
            android:id="@+id/publish_in_button"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_rates_indicator_default_publish_in_text"
            android:textColor="@color/message_rates_indicator_default_publish_in_color"
            style="@style/RabbitmqManagement.Widget.QueuedMessagesIndicator.Button"
            />

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_rates_indicator_default_confirm_text"
            android:textColor="@color/message_rates_indicator_default_confirm_color"
            style="@style/RabbitmqManagement.Widget.QueuedMessagesIndicator.Button"
            />

        <Button
            android:id="@+id/deliver_button"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_rates_indicator_default_deliver_text"
            android:textColor="@color/message_rates_indicator_default_deliver_color"
            style="@style/RabbitmqManagement.Widget.QueuedMessagesIndicator.Button"
            />

        <Button
            android:id="@+id/redelivered_button"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_rates_indicator_default_redelivered_text"
            android:textColor="@color/message_rates_indicator_default_redelivered_color"
            style="@style/RabbitmqManagement.Widget.QueuedMessagesIndicator.Button"
            />

      </TableRow>

    </TableLayout>

  </LinearLayout>

</android.support.v7.widget.CardView>
