<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/row_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/global_counts_indicator_exchanges"
            />

        <TextView
            android:id="@+id/exchanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="15"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/global_counts_indicator_queues"
            />

        <TextView
            android:id="@+id/queues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="378"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

  </LinearLayout>

  <LinearLayout
      android:id="@+id/row_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/global_counts_indicator_connections"
            />

        <TextView
            android:id="@+id/connections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="120"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/global_counts_indicator_consumers"
            />

        <TextView
            android:id="@+id/consumers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="31"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/global_counts_indicator_channels"
            />

        <TextView
            android:id="@+id/channels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="65"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

  </LinearLayout>

</LinearLayout>
